<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSettingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_screen"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_8sdp">

    <include
        android:id="@+id/header"
        layout="@layout/view_screen_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_10sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp">

            <TextView
                android:id="@+id/rowNotifications"
                style="@style/Widget.Ff.SettingsRow"
                android:drawableStart="@drawable/ic_notifications"
                android:text="@string/ff_settings_notifications" />

            <TextView
                android:id="@+id/rowShare"
                style="@style/Widget.Ff.SettingsRow"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/ff_settings_share" />

            <TextView
                android:id="@+id/rowRate"
                style="@style/Widget.Ff.SettingsRow"
                android:drawableStart="@drawable/ic_star"
                android:text="@string/ff_settings_rate" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Ff.Body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/ff_disclaimer"
                android:textAppearance="@style/TextAppearance.Ff.Body"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/adBanner"
        layout="@layout/view_ad_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp" />
</LinearLayout>
