<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flDialogRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_18sdp">

    <LinearLayout
        android:id="@+id/llDialogCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_card"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingTop="@dimen/_22sdp"
        android:paddingBottom="@dimen/_18sdp">

        <ImageView
            android:id="@+id/imgNotificationIcon"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:background="@drawable/bg_notification_icon_plate"
            android:contentDescription="@null"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_bell"
            app:tint="@color/ff_click_pill" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center"
            android:text="@string/notification_rationale_title"
            android:textAppearance="@style/TextAppearance.Ff.ScreenTitle"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/notification_rationale_desc"
            android:textAppearance="@style/TextAppearance.Ff.Body"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btnEnable"
            style="@style/Widget.Ff.PrimaryButton"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/notification_rationale_enable" />

        <TextView
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/notification_rationale_later"
            android:textAppearance="@style/TextAppearance.Ff.Body"
            android:textColor="@color/ff_text_muted"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</FrameLayout>
